--- a/src/scss/shared/_basics.scss
+++ b/src/scss/shared/_basics.scss
@@ -164,6 +164,8 @@ figure.wp-block-video figcaption {
 
 .body,
 body.editor-styles-wrapper {
+	word-break: break-word;
+
 	p, ol, ul, li { margin-bottom: .75em; }
 	li li { margin-bottom: .25em; }
 	p:last-child { margin-bottom: 0; }
