--- a/src/scss/shared/_wpcore.scss
+++ b/src/scss/shared/_wpcore.scss
@@ -116,3 +116,14 @@ a img.aligncenter {
 	max-width: 100vw;
 	width: calc(100% + 2em);
 }
+
+[data-align="center"] {
+	display: flex;
+	align-items: center;
+}
+[data-align="full"] {
+	max-width: 100% !important;
+}
+[data-align="wide"] {
+	max-width: calc(#{$width-max} + 2em) !important;
+}
