--- a/src/scss/backend/_.scss
+++ b/src/scss/backend/_.scss
@@ -4,14 +4,15 @@
 .wp-block {
 	max-width: $width-max;
 }
-*/
+//*/
 /*
 .is-root-container {
-	max-width: $width-max;
+	width: $width-max;
+	max-width: 100%;
 	margin-left: auto;
 	margin-right: auto;
 }
-*/
+//*/
 
 .editor-post-title__block .editor-post-title__input{
 	font-family: var(--#{$PREFIX}-font-family);
