set --vh100 var

--- a/src/scss/shared/_basics.scss
+++ b/src/scss/shared/_basics.scss
@@ -8,6 +8,11 @@ html {
 }
 */
 
+:root {
+	--vh: 1vh;
+	--vh100: calc(var(--vh) * 100);
+}
+
 html,body {
 	background-color: var(--#{$PREFIX}-color-site-background);
 	color: var(--#{$PREFIX}-color-content-foreground);
