better looking images on chrome

--- a/src/scss/shared/_basics.scss
+++ b/src/scss/shared/_basics.scss
@@ -90,7 +90,11 @@ figure {
 	}
 }
 
-img { max-width: 100%; height: auto; }
+img {
+	max-width: 100%;
+	height: auto;
+	image-rendering: -webkit-optimize-contrast;
+}
 img:not([src]) { visibility: hidden; }
 
 body > main,
