--- a/src/scss/shared/_wpcore.scss
+++ b/src/scss/shared/_wpcore.scss
@@ -105,16 +105,16 @@ a img.aligncenter {
 .is-style-full-browser-width,
 .alignwide,
 .full-width {
-	margin-left: calc(50% - 50vw);
-	margin-right: calc(50% - 50vw);
+	margin-left: calc(50% - 50vw) !important;
+	margin-right: calc(50% - 50vw) !important;
 	max-width: 100vw;
 	width: 100vw;
 }
 .alignwide {
-	margin-left: -1em;
-	margin-right: -1em;
-	max-width: 100vw;
-	width: calc(100% + 2em);
+	margin-left: -1em !important;
+	margin-right: -1em !important;
+	max-width: 100vw !important;
+	width: calc(100% + 2em) !important;
 }
 
 [data-align="center"] {
