default image and table styles

--- a/src/scss/shared/_basics.scss
+++ b/src/scss/shared/_basics.scss
@@ -93,9 +93,19 @@ figure {
 img {
 	max-width: 100%;
 	height: auto;
+	object-fit: cover;
 	image-rendering: -webkit-optimize-contrast;
 }
 img:not([src]) { visibility: hidden; }
+
+table,
+.wp-block-table {
+	border-collapse: collapse;
+
+	td {
+		border: 0;
+	}
+}
 
 body > main,
 body.editor-styles-wrapper {
