--- a/src/scss/frontend/masthead/_menu.scss
+++ b/src/scss/frontend/masthead/_menu.scss
@@ -21,6 +21,8 @@
 	max-height: 0;
 	overflow: hidden;
 
+	visibility: hidden;
+
 	@include phone() {
 		width: 100%;
 	}
@@ -60,6 +62,7 @@
 	body.menu-active & {
 		max-height: var(--vh100);
 		transition-delay: 0s;
+		visibility: visible;
 
 		&.is-open {
 			overflow-y: auto;
