default menu styles

--- a/src/default_variables.scss
+++ b/src/default_variables.scss
@@ -28,6 +28,7 @@
 	--#{$PREFIX}-file-main_menu-background-cssurl: none;
 	--#{$PREFIX}-setting-main_menu-background-position: top left;
 	--#{$PREFIX}-setting-main_menu-background-size: cover;
+	--#{$PREFIX}-setting-main_menu-background-attachment: fixed;
 
 	--#{$PREFIX}-color-content-background: #ffffff;
 	--#{$PREFIX}-color-content-foreground: #000000;
