--- a/src/scss/frontend/_wpadminbar.scss
+++ b/src/scss/frontend/_wpadminbar.scss
@@ -1,10 +1,17 @@
 #wpadminbar { position: fixed !important; }
 html { position: relative; }
+
+:root {
+	--wp_admin_bar_height: 0;
+}
 body.admin-bar {
+	--wp_admin_bar_height: 32px;
+
+	@include tablet {
+		--wp_admin_bar_height: 46px;
+	}
+
 	& > .masthead {
-		top: 32px;
-		@include tablet() {
-			top: 46px;
-		}
+		top: var(--wp_admin_bar_height);
 	}
 }
