--- a/src/scss/frontend/_wpadminbar.scss
+++ b/src/scss/frontend/_wpadminbar.scss
@@ -2,7 +2,7 @@
 html { position: relative; }
 
 :root {
-	--wp_admin_bar_height: 0;
+	--wp_admin_bar_height: 0px;
 }
 body.admin-bar {
 	--wp_admin_bar_height: 32px;
