--- a/src/scss/shared/_functions.scss
+++ b/src/scss/shared/_functions.scss
@@ -24,7 +24,7 @@
 		}
 	}
 	@media not all and (hover: none), all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-		&:hover, &:focus {
+		&:hover, &:focus, &:active {
 			@content
 		}
 	}
