--- a/src/scss/shared/mixins/cards.scss
+++ b/src/scss/shared/mixins/cards.scss
@@ -26,14 +26,16 @@
 	0 .05em 1em rgba(0, 0, 0, 0.14);
 	overflow: hidden;
 
-	&:focus {
+	&:focus-within, & > a:focus-within {
 		outline: var(--focus-outline);
 	}
 
-	@include hover {
-		transform: scale(1.03);
-		box-shadow: 0 0 1px 0 var(--hover-outline-color),
-		0 0 1.5em rgba(0, 0, 0, 0.14);
-		z-index: 2;
+	&, & > a {
+		@include hover {
+			transform: scale(1.03);
+			box-shadow: 0 0 1px 0 var(--hover-outline-color),
+			0 0 1.5em rgba(0, 0, 0, 0.14);
+			z-index: 2;
+		}
 	}
 }
