% base font size gets weird in the editor, revert to px

--- a/src/default_variables.scss
+++ b/src/default_variables.scss
@@ -47,7 +47,7 @@
 
 	--#{$PREFIX}-font-font_family: 'Montserrat', Helvetica, Arial, sans-serif;
 	--#{$PREFIX}-font-header_family: inherit;
-	--#{$PREFIX}-font-base_size: 118.75%;
+	--#{$PREFIX}-font-base_size: 19px;
 	--#{$PREFIX}-font-base_lineheight: 1.6;
 
 	--#{$PREFIX}-masthead-height: 8vh;
