--- a/src/scss/backend/_.scss
+++ b/src/scss/backend/_.scss
@@ -14,7 +14,8 @@
 }
 //*/
 
-.editor-post-title__block .editor-post-title__input{
+.editor-post-title__block .editor-post-title__input,
+.edit-post-visual-editor__post-title-wrapper .editor-post-title__input {
 	font-family: var(--#{$PREFIX}-font-family);
 	font-size: 2.5em;
 	text-align: center;
