--- a/src/scss/frontend/archives/cards.scss
+++ b/src/scss/frontend/archives/cards.scss
@@ -37,7 +37,11 @@
 			height: 100%;
 			background-color: #fff;
 			color: inherit;
-
+		}
+		&.no-post-thumbnail>a {
+			padding: 1.5em 1em;
+			background-color: var(--background-color, var(--#{$PREFIX}-color-brand));
+			color: var(--title-color, var(--#{$PREFIX}-color-content-background));
 		}
 
 		header {
