on cards with no image, justify/align content center

--- a/src/scss/frontend/archives/cards.scss
+++ b/src/scss/frontend/archives/cards.scss
@@ -42,6 +42,10 @@
 			padding: 1.5em 1em;
 			background-color: var(--background-color, var(--#{$PREFIX}-color-brand));
 			color: var(--title-color, var(--#{$PREFIX}-color-content-background));
+			justify-content: center;
+			align-content: center;
+			align-items: center;
+			text-align: center;
 		}
 
 		header {
