Fixes for block editor mobile preview
handle/inject styles in both desktop inline and mobile preview iframe, remove junk

--- a/src/default_variables.scss
+++ b/src/default_variables.scss
@@ -1,6 +1,7 @@
 @import 'global.scss';
 
 :root,::after,::before {
+	--#{$PREFIX}-default_variables: 1;
 	--#{$PREFIX}-color-site-background: transparent;
 
 	--#{$PREFIX}-color-masthead-background: #00598e;
