--- a/src/scss/backend/_.scss
+++ b/src/scss/backend/_.scss
@@ -1,25 +1,16 @@
 @import '../shared/_';
 
-/*
-.wp-block {
-	max-width: $width-max;
+.edit-post-visual-editor__post-title-wrapper {
+	margin-bottom: 0;
 }
-//*/
-/*
-.is-root-container {
-	width: $width-max;
-	max-width: 100%;
-	margin-left: auto;
-	margin-right: auto;
-}
-//*/
-
 .editor-post-title__block .editor-post-title__input,
 .edit-post-visual-editor__post-title-wrapper .editor-post-title__input {
 	font-family: var(--#{$PREFIX}-font-family);
-	font-size: 2.5em;
 	text-align: center;
 }
 h1, h2, h3, h4, h5, h6 {
 	font-family: inherit;
+}
+body {
+	padding: 0 1rem;
 }
