--- a/src/scss/shared/_basics.scss
+++ b/src/scss/shared/_basics.scss
@@ -34,7 +34,8 @@ body {
 	background-color: var(--#{$PREFIX}-color-content-background);
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6,
+.edit-post-visual-editor__post-title-wrapper > h1 {
 	display: block;
 	font-size: 1em;
 	font-weight: bold;
@@ -42,7 +43,10 @@ h1, h2, h3, h4, h5, h6 {
 	margin: 0 0 .5em;
 	padding: 0;
 }
-	h1 { font-size: 2.5em; }
+	h1,
+	.edit-post-visual-editor__post-title-wrapper > h1 {
+		font-size: 2.5em;
+	}
 	h2 { font-size: 2.25em; }
 	h3 { font-size: 1.75em; }
 	h4 { font-size: 1.5em; }
@@ -52,7 +56,10 @@ h1, h2, h3, h4, h5, h6 {
 		h2, h3, h4, h5, h6 {
 			line-height: 1.3;
 		}
-		h1 { font-size: 2.15em; }
+		h1,
+		.edit-post-visual-editor__post-title-wrapper > h1 {
+			font-size: 2.15em;
+		}
 		h2 { font-size: 2em; }
 		h3 { font-size: 1.5em; }
 		h4 { font-size: 1.15em; }
@@ -110,13 +117,9 @@ table,
 	}
 }
 
-body > main,
-body.editor-styles-wrapper {
+body > main {
 	background-color: var(--#{$PREFIX}-color-content-background);
-	font-size: 1rem;
-}
-body.editor-styles-wrapper {
-	font-size: var(--#{$PREFIX}-font-base_size);
+	//font-size: 1rem;
 }
 
 .row {
