--- a/src/scss/shared/_hacks.scss
+++ b/src/scss/shared/_hacks.scss
@@ -26,9 +26,11 @@
 }
 
 // Handle Kadence inherit max content width from theme
+/*
 .kb-theme-content-width {
 	max-width: $width-max;
 }
+*/
 
 // Allow reversing columns on mobile
 .reverse-columns-on-mobile {
