--- a/src/scss/shared/_wpcore.scss
+++ b/src/scss/shared/_wpcore.scss
@@ -114,7 +114,7 @@ a img.aligncenter {
 	margin-left: -1em !important;
 	margin-right: -1em !important;
 	max-width: 100vw !important;
-	width: calc(100% + 2em) !important;
+	width: calc(#{$width-max} + 2em) !important;
 }
 
 [data-align="center"] {
@@ -122,7 +122,9 @@ a img.aligncenter {
 	align-items: center;
 }
 [data-align="full"] {
-	max-width: 100% !important;
+	max-width: none !important;
+	margin-left: -1rem;
+	margin-right: -1rem;
 }
 [data-align="wide"] {
 	max-width: calc(#{$width-max} + 2em) !important;
