don't use shorthand for text-decoration

--- a/src/scss/frontend/archives/header.scss
+++ b/src/scss/frontend/archives/header.scss
@@ -91,7 +91,7 @@ header.page_title {
 		padding: .25em .5em;
 		margin: 0 .25em;
 		line-height: 1.2;
-		text-decoration: none;
+		text-decoration-line: none;
 		white-space: nowrap;
 		word-break: break-word;
 		transition: background-color .15s, color .15s;
