--- a/src/scss/frontend/masthead/_.scss
+++ b/src/scss/frontend/masthead/_.scss
@@ -94,7 +94,7 @@
 
 		a {
 			display: inline-block;
-			text-decoration: none;
+			text-decoration-line: none;
 			color: inherit;
 			transition: all .2s;
 
