--- a/src/scss/shared/_basics.scss
+++ b/src/scss/shared/_basics.scss
@@ -203,7 +203,7 @@ body.editor-styles-wrapper {
 
 .no-link-underline a,
 a.no-link-underline {
-	text-decoration: none;
+	text-decoration-line: none;
 }
 
 .negative-margin-top-1em {
