--- a/src/scss/shared/_hacks.scss
+++ b/src/scss/shared/_hacks.scss
@@ -46,7 +46,7 @@
 
 // remove underline on kadence block link wrappers
 .kt-blocks-info-box-link-wrap {
-	text-decoration: none;
+	text-decoration-line: none;
 }
 // Max width for kadence info block images
 .kt-blocks-info-box-media {
