--- a/src/scss/frontend/archives/cards.scss
+++ b/src/scss/frontend/archives/cards.scss
@@ -32,7 +32,7 @@
 			display: flex;
 			flex-direction: column;
 			flex-basis: calc(var(--card-width) - var(--card-gap));
-			text-decoration: none;
+			text-decoration-line: none;
 			word-break: break-word;
 			height: 100%;
 			background-color: #fff;
