--- a/src/scss/frontend/archives/tax-children.scss
+++ b/src/scss/frontend/archives/tax-children.scss
@@ -28,7 +28,7 @@
 		border-radius: .2em;
 		white-space: nowrap;
 		word-break: break-word;
-		text-decoration: none;
+		text-decoration-line: none;
 		padding: .75em 1.5em;
 		position: relative;
 		transition: all .05s;
@@ -69,7 +69,7 @@
 
 		a {
 			color: inherit;
-			text-decoration: none;
+			text-decoration-line: none;
 
 			@include hover {
 				color: var(--#{$PREFIX}-color-brand);
