--- a/src/scss/frontend/footer/_.scss
+++ b/src/scss/frontend/footer/_.scss
@@ -54,11 +54,11 @@ body > footer {
 
 	a {
 		color: inherit;
-		text-decoration: none;
+		text-decoration-line: none;
 
 		@include hover {
 			color: var(--#{$PREFIX}-color-highlight);
-			text-decoration: underline;
+			text-decoration-line: underline;
 		}
 	}
 
