--- a/src/scss/frontend/masthead/_menu.scss
+++ b/src/scss/frontend/masthead/_menu.scss
@@ -40,7 +40,7 @@
 	a, span, .search {
 		display: block;
 		color: inherit;
-		text-decoration: none;
+		text-decoration-line: none;
 		text-shadow: 1px 1px 1px rgba(0,0,0,0.6);
 		padding: .5em 0.75em;
 		position: relative;
