--- a/src/scss/shared/_wpcore.scss
+++ b/src/scss/shared/_wpcore.scss
@@ -22,7 +22,7 @@
 		left: 5px;
 		line-height: normal;
 		padding: 15px 23px 14px;
-		text-decoration: none;
+		text-decoration-line: none;
 		top: 5px;
 		width: auto;
 		z-index: 100000; /* Above WP toolbar. */
