--- a/src/scss/shared/blocks/wp-block-query-pagination.scss
+++ b/src/scss/shared/blocks/wp-block-query-pagination.scss
@@ -21,7 +21,7 @@
 	a.page-numbers {
 		background: rgba(0, 0, 0, 0.5);
 		color: #fff;
-		text-decoration: none;
+		text-decoration-line: none;
 
 		@include hover {
 			background: #000;
